@@ -18,6 +18,7 @@ import java.net.DatagramPacket;
 import java.net.InetAddress;
 import java.net.MulticastSocket;
 import java.net.UnknownHostException;
+import java.util.Arrays;
 import java.util.HashMap;
 
 import javax.management.InstanceAlreadyExistsException;
@@ -29,6 +30,16 @@ import javax.management.ObjectName;
 import javax.management.remote.JMXConnectorServer;
 import javax.management.remote.JMXConnectorServerFactory;
 import javax.management.remote.JMXServiceURL;
+
+import org.apache.sshd.SshServer;
+import org.apache.sshd.common.NamedFactory;
+import org.apache.sshd.server.Command;
+import org.apache.sshd.server.PasswordAuthenticator;
+import org.apache.sshd.server.command.ScpCommandFactory;
+import org.apache.sshd.server.keyprovider.SimpleGeneratorHostKeyProvider;
+import org.apache.sshd.server.session.ServerSession;
+import org.apache.sshd.server.sftp.SftpSubsystem;
+import org.apache.sshd.server.shell.ProcessShellFactory;
 
 import com.webobjects.appserver.WOApplication;
 import com.webobjects.appserver.WORequest;
@@ -46,6 +57,7 @@ import com.webobjects.monitor.wotaskd.rest.controllers.MHostController;
 import com.webobjects.monitor.wotaskd.rest.controllers.MSiteConfigController;
 
 import er.extensions.appserver.ERXApplication;
+import er.extensions.foundation.ERXProperties;
 import er.rest.routes.ERXRoute;
 import er.rest.routes.ERXRouteRequestHandler;
 
@@ -75,27 +87,30 @@ public class Application extends ERXApplication  {
     	ERXApplication.main(argv, Application.class);
     }
 
+    @Override
     public String defaultRequestHandlerClassName() {
         return "com.webobjects.appserver._private.WODirectActionRequestHandler";
     }
 
+    @Override
     public String name() {
         return "wotaskd";
     }
 
+    @Override
     public Number port() {
         if (_port == null) {
             if (super.port().intValue() > 0) {
                 _port = super.port();
             } else {
-                _port = new Integer(1085);
+                _port = Integer.valueOf(1085);
             }
             _intPort = _port.intValue();
         }
         return _port;
     }
 
-    private int intPort() {
+    protected int intPort() {
         return _intPort;
     }
 
@@ -103,6 +118,7 @@ public class Application extends ERXApplication  {
         return _multicastAddress;
     }
 
+    @Override
     public boolean allowsConcurrentRequestHandling() {
         return true;
     }
@@ -110,6 +126,7 @@ public class Application extends ERXApplication  {
     public MSiteConfig siteConfig() {
         return _siteConfig;
     }
+
     public void setSiteConfig(MSiteConfig aConfig) {
         // Don't need to call dataHasChanged, since a new MSiteConfig is already dirty
         _siteConfig = aConfig;
@@ -222,6 +239,33 @@ public class Application extends ERXApplication  {
         restHandler.insertRoute(new ERXRoute("MSiteConfig","/mSiteConfig", ERXRoute.Method.Put, MSiteConfigController.class, "update"));
 
         ERXRouteRequestHandler.register(restHandler);
+        
+        boolean isSSHServerEnabled = ERXProperties.booleanForKeyWithDefault("er.wotaskd.sshd.enabled", false);
+        
+        if (isSSHServerEnabled) {
+          SshServer sshd = SshServer.setUpDefaultServer();
+          sshd.setPort(ERXProperties.intForKeyWithDefault("er.wotaskd.sshd.port", 6022));
+          sshd.setPasswordAuthenticator(new SshPasswordAuthenticator());
+          sshd.setKeyPairProvider(new SimpleGeneratorHostKeyProvider("hostkey.ser"));
+          sshd.setCommandFactory(new ScpCommandFactory());
+          sshd.setSubsystemFactories(Arrays.<NamedFactory<Command>>asList(new SftpSubsystem.Factory()));
+          sshd.setShellFactory(new ProcessShellFactory(new String[] { "/bin/bash", "-i", "-l" }));
+          try {
+            sshd.start();
+          }
+          catch (IOException e) {
+            // TODO Auto-generated catch block
+            e.printStackTrace();
+          }
+        }
+    }
+    
+    public class SshPasswordAuthenticator implements PasswordAuthenticator {
+
+      public boolean authenticate(String username, String password, ServerSession serversession) {
+        return (siteConfig().compareStringWithPassword(password)) ? true: false;
+      }
+      
     }
     
 	/**
@@ -233,6 +277,7 @@ public class Application extends ERXApplication  {
 	 * @param strDomainName - Domain name required for creating the ObjectName of the MBean
 	 * @param strMBeanName  - Name of the MBean
 	 */
+	@Override
 	public void registerMBean(Object objMBean, String strDomainName, String strMBeanName) throws IllegalArgumentException{
 		if (objMBean == null)
 			throw new IllegalArgumentException("Error: Could not register null to PlatformMbeanServer.");
@@ -274,9 +319,10 @@ public class Application extends ERXApplication  {
 	 * name is passed as null.
 	 * @return _mbsDomain  - String containing the Domain name to be used while registering the MBean
 	 */
+	@Override
     public String getJMXDomain() {
 		if (_mbsDomain == null) {
-			_mbsDomain = this.host() + "." + this.name() + "." + this.port();
+			_mbsDomain = host() + "." + name() + "." + port();
 		}
 		return _mbsDomain;
     }
@@ -324,6 +370,7 @@ public class Application extends ERXApplication  {
 	 * This methods returns the platform MBean Server from the Factory
 	 * @return _mbeanServer  - The platform MBeanServer 
 	 */
+	@Override
 	public MBeanServer getMBeanServer() throws IllegalAccessException {
 		if (_mbeanServer == null) {
 			_mbeanServer = ManagementFactory.getPlatformMBeanServer();	
@@ -349,6 +396,7 @@ public class Application extends ERXApplication  {
     // sleep will check if there have been changes to the siteConfig.
     // if so, it will write the new siteConfig to disk as SiteConfig.xml
     // if requested, it will also write the new adaptorConfig to disk as WOConfig.xml
+    @Override
     public void sleep() {
         _lock.startReading();
         try {
@@ -374,6 +422,7 @@ public class Application extends ERXApplication  {
     }
 
     // cleans up after the Application (specifically the ListenThread)
+    @Override
     public void finalize() throws Throwable {
         listenThread.closeRequestSocket();
         listenThread.stop();
@@ -386,11 +435,12 @@ public class Application extends ERXApplication  {
             anHTTPVersion = MObject._HTTP1;
             aURL = aURL.substring(0, (aURL.length() - MObject._HTTP1.length() - 1) );
         }
-        return super._createRequest(aMethod, aURL, anHTTPVersion, someHeaders, aContent, someInfo);
+        return super.createRequest(aMethod, aURL, anHTTPVersion, someHeaders, aContent, someInfo);
     }
 
     // overridden dispatch of requests, for faster lifebeat checking
     // if it's a lifebeat, we return a null response, and that should close the socket immediately
+    @Override
     public WOResponse dispatchRequest(WORequest aRequest) {
         WORequestHandler aHandler = handlerForRequest(aRequest);
         if ( (aHandler != null) && (aHandler == _lifebeatRequestHandler) ) {
@@ -544,11 +594,11 @@ public class Application extends ERXApplication  {
             System.exit(1);
         }
 
+        @Override
         public void run() {
             createRequestSocket();
             NSLog.debug.appendln("Created UDP socket; listening for requests...");
             listenForRequests();
         }
     }
-    
 }
