@@ -32,6 +32,7 @@ import java.util.StringTokenizer;
 import java.util.Vector;
 
 import org.apache.commons.lang.CharEncoding;
+import org.apache.commons.lang.StringUtils;
 import org.apache.log4j.Logger;
 
 import com.webobjects.appserver.WOApplication;
@@ -56,6 +57,7 @@ import com.webobjects.foundation.NSTimestamp;
 
 import er.extensions.appserver.ERXMessageEncoding;
 import er.extensions.eof.ERXConstant;
+import er.extensions.formatters.ERXSimpleHTMLFormatter;
 
 /**
  * Collection of {@link java.lang.String String} utilities. Contains
@@ -184,7 +186,9 @@ public class ERXStringUtilities {
 	 * @param b
 	 *            second string
 	 * @return the distance between the two strings
+	 * @deprecated use {@link StringUtils#getLevenshteinDistance(String, String)} instead
 	 */
+	@Deprecated
 	public static int levenshteinDistance(String a, String b) {
 		int n = a.length();
 		int m = b.length();
@@ -278,11 +282,11 @@ public class ERXStringUtilities {
             if( value!=null && value instanceof String){
                 String comparedString = ((String)value).toUpperCase();
                 String cleanedComparedString = cleaner.cleanStringForFuzzyMatching(comparedString);
-                if( (distance(name, comparedString) <=
+                if( (levenshteinDistance(name, comparedString) <=
                      Math.min((double)name.length(), (double)comparedString.length())*adjustement ) ||
-                    (distance(cleanedName, cleanedComparedString) <=
+                    (levenshteinDistance(cleanedName, cleanedComparedString) <=
                      Math.min((double)cleanedName.length(), (double)cleanedComparedString.length())*adjustement)){
-                    dico.setObjectForKey( new Double(distance(name, comparedString)), _DISTANCE );
+                    dico.setObjectForKey( Double.valueOf(levenshteinDistance(name, comparedString)), _DISTANCE );
                     NSDictionary<String, Object> pkValues = new NSDictionary<String, Object>(dico.objectsForKeys(pks, NSKeyValueCoding.NullValue ), pks);
                     dico.setObjectForKey( EOUtilities.faultWithPrimaryKey( ec, entityName, pkValues ), eoKey );
                     results.addObject( dico );
@@ -297,11 +301,11 @@ public class ERXStringUtilities {
                     Vector v = (Vector)plist;
                     for(int i = 0; i< v.size(); i++){
                         String comparedString = ((String)v.elementAt(i)).toUpperCase();
-                        if((distance(name, comparedString) <=
+                        if((levenshteinDistance(name, comparedString) <=
                             Math.min((double)name.length(), (double)comparedString.length())*adjustement) ||
-                           (distance(cleanedName, comparedString) <=
+                           (levenshteinDistance(cleanedName, comparedString) <=
                             Math.min((double)cleanedName.length(), (double)comparedString.length())*adjustement)){
-                            dico.setObjectForKey( new Double(distance(name, comparedString)), _DISTANCE );
+                            dico.setObjectForKey( Double.valueOf(levenshteinDistance(name, comparedString)), _DISTANCE );
                             NSDictionary<String, Object> pkValues = new NSDictionary<String, Object>(dico.objectsForKeys(pks, NSKeyValueCoding.NullValue ), pks);
                             dico.setObjectForKey( EOUtilities.faultWithPrimaryKey( ec, entityName, pkValues ), eoKey );
                             results.addObject( dico );
@@ -314,7 +318,7 @@ public class ERXStringUtilities {
         if( sortOrderings != null ) {
             results = (NSMutableArray<NSMutableDictionary<String, Object>>) EOSortOrdering.sortedArrayUsingKeyOrderArray(results, sortOrderings);
         }
-        return (NSArray) results.valueForKey( eoKey );        
+        return (NSArray) results.valueForKey( eoKey );
     }
     
     /**
@@ -440,7 +444,7 @@ public class ERXStringUtilities {
      * @param s string to caclulate an Integer from
      * @return parsed Integer from the string or null
      *		if the string is not correctly formed.
-     * @see ERXConstant#integerForString(String)
+     * @see er.extensions.eof.ERXConstant#integerForString(String)
      */
     public static Integer integerWithString(String s) {
         try {
@@ -684,7 +688,9 @@ public class ERXStringUtilities {
      * @param newString to be inserted
      * @param buffer string to have the replacement done on it
      * @return string after having all of the replacement done.
+     * @deprecated use {@link StringUtils#replace(String, String, String)} instead
      */
+    @Deprecated
     public static String replaceStringByStringInString(String old, String newString, String buffer) {
         int begin, end;
         int oldLength = old.length();
@@ -719,7 +725,9 @@ public class ERXStringUtilities {
      * @param replacementString the string with which to replace stringToReplace.
      * @return sourceString with stringToReplace replaced with replacementString if it
      *         existed in sourceString.  otherwise, sourceString is returned.
+     * @deprecated use {@link StringUtils#replaceOnce(String, String, String)} instead
      */
+    @Deprecated
     public static String stringByReplacingFirstOccurrenceOfStringWithString(final String sourceString, final String stringToReplace, final String replacementString) {
         final int indexOfMatch = sourceString.indexOf(stringToReplace);
         final String result;
@@ -1099,7 +1107,7 @@ public class ERXStringUtilities {
 
     public static String toHexString(char c) {
     	StringBuilder result = new StringBuilder("\u005C\u005Cu9999".length());
-        String u = Long.toHexString((int) c).toUpperCase();
+        String u = Long.toHexString(c).toUpperCase();
         switch (u.length()) {
             case 1:   result.append("\u005C\u005Cu000");  break;
             case 2:   result.append("\u005C\u005Cu00");   break;
@@ -1561,24 +1569,24 @@ public class ERXStringUtilities {
     }
 
     /**
-     * Returns a string from the input stream using the default
-     * encoding.
-     * @param in stream to read
-     * @return string representation of the stream.
+         * Returns a string from the input stream using the default
+          * encoding.
+          * @param in stream to read
+          * @return string representation of the stream.
      * @throws IOException if things go wrong
-     */
+      */
      public static String stringFromInputStream(InputStream in) throws IOException {
          return new String(ERXFileUtilities.bytesFromInputStream(in));
      }
 
      /**
       * Returns a string from the input stream using the default
-      * encoding.
-      * @param in stream to read
-      * @param encoding to be used, null will use the default
-      * @return string representation of the stream.
+       * encoding.
+       * @param in stream to read
+       * @param encoding to be used, null will use the default
+       * @return string representation of the stream.
       * @throws IOException if things go wrong
-      */
+   */
      public static String stringFromInputStream(InputStream in, String encoding) throws IOException {
          return new String(ERXFileUtilities.bytesFromInputStream(in), encoding);
      }
@@ -2336,9 +2344,9 @@ public class ERXStringUtilities {
 	 * @return the string without HTML characters in it
 	 */
 	public static String stripHtml(String str, boolean convertChars) {
-		String stripped = str;
-		if (stripped != null) {
-			stripped = stripped.replaceAll("<[^>]*>", " ");
+ 		String stripped = str;
+ 		if (stripped != null) {
+ 			stripped = stripped.replaceAll("<[^>]*>", " ");
 			if(convertChars) {
 				stripped = stripped.replaceAll("\\s+", " ");
 				stripped = stripped.replaceAll("&#8217;", "'");
@@ -2352,11 +2360,79 @@ public class ERXStringUtilities {
 				stripped = stripped.replaceAll("&#174;", "(C)");
 				stripped = stripped.replaceAll("&#174;", "(R)");
 				stripped = stripped.replaceAll("&#8482;", "(TM)");
-				stripped = stripped.trim();
+			stripped = stripped.trim();
 			}
 		}
 		return stripped;
 	}
+	
+    /**
+     * Removes all of the HTML tags from a given string.
+     * Note: this is a very simplistic implementation
+     * and will most likely not work with complex HTML.
+     * Note: for actual conversion of HTML tags into regular
+     * strings have a look at {@link ERXSimpleHTMLFormatter}
+     * @param s html string
+     * @return string with all of its html tags removed
+     */
+    // FIXME: this is so simplistic it will break if you sneeze
+    public static String removeHTMLTagsFromString(String s) {
+        StringBuffer result=new StringBuffer();
+        if (s != null && s.length()>0) {
+            int position=0;
+            while (position<s.length()) {
+                int indexOfOpeningTag=s.indexOf("<",position);
+                if (indexOfOpeningTag!=-1) {
+                    if (indexOfOpeningTag!=position)
+                        result.append(s.substring(position, indexOfOpeningTag));
+                    position=indexOfOpeningTag+1;
+                } else {
+                    result.append(s.substring(position, s.length()));
+                    position=s.length();
+                }
+                int indexOfClosingTag=s.indexOf(">",position);
+                if (indexOfClosingTag!=-1) {
+                    position= indexOfClosingTag +1;
+                } else {
+                    result.append(s.substring(position, s.length()));
+                    position=s.length();
+                }
+            }
+        }
+        return ERXStringUtilities.replaceStringByStringInString("&nbsp;"," ",result.toString());
+    }
+    
+    /**
+     * Returns the value stripped from HTML tags if <b>escapeHTML</b> is false.
+     * This makes sense because it is not terribly useful to have half-finished tags in your code.
+     * Note that the "length" of the resulting string is not very exact.
+     * FIXME: we could remove extra whitespace and character entities here
+     * @return value stripped from tags.
+     */
+    public static String strippedValue(String value, int length) {
+        if(value == null || value.length() < 1)
+            return null;
+        StringTokenizer tokenizer = new StringTokenizer(value, "<", false);
+        int token = value.charAt(0) == '<' ? 0 : 1;
+        String nextPart = null;
+        StringBuffer result = new StringBuffer();
+        int currentLength = result.length();
+        while (tokenizer.hasMoreTokens() && currentLength < length && currentLength < value.length()) {
+            if(token == 0)
+                nextPart = tokenizer.nextToken(">");
+            else {
+                nextPart = tokenizer.nextToken("<");
+                if(nextPart.length() > 0  && nextPart.charAt(0) == '>')
+                    nextPart = nextPart.substring(1);
+            }
+            if (nextPart != null && token != 0) {
+                result.append(nextPart);
+                currentLength += nextPart.length();
+            }
+            token = 1 - token;
+        }
+        return result.toString();
+    }
 	
 	/**
 	 * @deprecated use {@link #stripHtml(String, boolean)}
@@ -2633,7 +2709,7 @@ public class ERXStringUtilities {
 		}
 		return sum % 10 == 0;
 	}
-	
+
 	/**
 	* Returns a string trimmed about at the max lenght you define without truncating the last word and adding "..." (if necessary)
 	* 
@@ -2697,4 +2773,38 @@ public class ERXStringUtilities {
 		return retStr.toString();
 	}
 
+    /**
+     * Given an initial string and an array of substrings, 
+     * Removes any occurrences of any of the substrings
+     * from the initial string. Used in conjunction with
+     * fuzzy matching.
+     * @param newString initial string from which to remove other strings
+     * @param toBeCleaneds array of substrings to be removed from the initial string.
+     * @return cleaned string.
+     */
+    // FIXME: Should use a StringBuffer instead of creating strings all over the place.
+    public static String cleanString(String newString, NSArray<String> toBeCleaneds) {
+        String result=newString;
+        if (newString!=null) {
+            for(Enumeration e = toBeCleaneds.objectEnumerator(); e.hasMoreElements();){
+                String toBeCleaned = (String)e.nextElement();
+                if(newString.toUpperCase().indexOf(toBeCleaned)>-1){
+                    result=newString.substring(0, newString.toUpperCase().indexOf(toBeCleaned));
+                }
+            }
+        }
+        return result;
+    }
+	
+	public static boolean isBlank(String value) {
+		boolean isBlank = false;
+		if (value == null || value.trim().length() == 0) {
+			isBlank = true;
+		}
+		return isBlank;
+	}
+	
+	public static boolean isNotBlank(String value) {
+		return ! isBlank(value);
+	}
 }
